--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Local .terraform directories
 **/.terraform/*
+**/.terraform.lock.hcl
+**/terraform.tfstate
+**/terraform.tfstate.backup
 
 # Crash log files
 crash.log
