--- a/lessons/071/Makefile
+++ b/lessons/071/Makefile
@@ -1,10 +1,10 @@
 all: build push restart
 
 build:
-	docker build -t aputrabay/express:latest -f express/Dockerfile express
+	docker build -t zll600/express:latest -f express/Dockerfile express
 
 push:
-	docker push aputrabay/express:latest
+	docker push zll600/express:latest
 
 restart:
 	kubectl rollout restart deployment express
@@ -13,4 +13,4 @@ run:
 	node express/server.js
 
 run-docker:
-	docker run -p 8080:8080 aputrabay/express:latest
+	docker run -p 8080:8080 zll600/express:latest
