Avoid Token Leak

--- a/lessons/159/3-example/secret.yaml
+++ b/lessons/159/3-example/secret.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: argocd
 type: Opaque
 stringData:
-  my-token: aputra:dckr_pat_LeWZtI5IEfgBjRcSVx8uT8prgKU
+  my-token: your_real_token
