--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:recommended",
-    ":pinVersions",
-    ":pinAllExceptPeerDependencies",
-    "docker:pinDigests",
-    "group:allNonMajor"
+    "github>RightCapitalHQ/renovate-config",
+    ":automergeDigest"
   ]
 }
