--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>RightCapitalHQ/renovate-config",
-    ":automergeDigest"
-  ]
+    ":automergeDigest",
+  ],
+  "ignorePaths": ["lessons/247/"]
 }
