--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,18 @@
     "github>RightCapitalHQ/renovate-config",
     ":automergeDigest"
   ],
-  "ignorePaths": ["lessons/247/*"],
+  "ignorePaths": [
+    "lessons/247/*",
+    "lessons/129/*",
+    "lessons/152/*",
+    "lessons/218/*",
+    "lessons/158/*",
+    "lessons/159/*",
+    "lessons/202/*",
+    "lessons/144/*",
+    "lessons/198/*",
+    "lessons/160/*"
+  ],
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true
