--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,7 @@
     "lessons/218/**",
     "lessons/158/**",
     "lessons/159/**",
-    "lessons/202/**",
+    "lessons/202/**/*",
     "lessons/144/**",
     "lessons/198/**",
     "lessons/160/**",
